--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>CADASTRO DE CASOS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CADASTRO DE CASOS</title>
         <link rel="stylesheet" href="/static/css/home.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
@@ -18,19 +20,16 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{{url_for('add_user')}}" style="color: white;">Formulário</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/logout" style="color: white;" class="logout-btn">Logout</a>
+                    </li>
                 </ul>
               </div>
             </div>
           </nav>
     </header>
     <div class="container pt-3">
-        {% with messages=get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category,message in messages %}
-                    <div class="alert alert-{{category}}">{{message}}</div>      
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+        
         {% block body %}
 
         {% endblock %}
